--- a/src/main/resources/com/vertex/vos/assets/style.css
+++ b/src/main/resources/com/vertex/vos/assets/style.css
@@ -52,7 +52,18 @@
     -fx-pref-width: 250px;
     -fx-min-width: 150px;
 }
-
+.non-editable {
+    -fx-background-color:  #fff;
+    -fx-border-color: linear-gradient(to right, -var-primary-color, -var-accent-color);
+    -fx-border-radius: 30px;
+    /* Circular border radius */
+    -fx-background-radius: 30px;
+    /* Increased padding */
+    -fx-pref-height: 40px;
+    /* Adjust height as needed */
+    -fx-pref-width: 250px;
+    -fx-min-width: 150px;
+}
 .text-label {
     -fx-alignment: CENTER;
     -fx-text-fill: -var-text-fill;
