--- a/src/main/resources/com/vertex/vos/customerRegistration.fxml
+++ b/src/main/resources/com/vertex/vos/customerRegistration.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CustomerRegistrationController">
+<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CustomerRegistrationController">
    <top>
       <HBox alignment="CENTER_LEFT" spacing="10.0" BorderPane.alignment="CENTER">
          <children>
@@ -76,7 +76,7 @@
                                     <Insets left="10.0" />
                                  </VBox.margin>
                               </Label>
-                              <ComboBox fx:id="storeTypeComboBox" editable="true" prefWidth="150.0" />
+                              <ComboBox fx:id="storeTypeComboBox" prefWidth="150.0" styleClass="non-editable" />
                               <Label fx:id="storeTypeErr" layoutX="20.0" layoutY="10.0" style="-fx-text-fill: #ff0000;" textFill="RED">
                                  <VBox.margin>
                                     <Insets left="10.0" />
