--- a/src/main/resources/com/vertex/vos/SalesInvoices.fxml
+++ b/src/main/resources/com/vertex/vos/SalesInvoices.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
@@ -14,7 +15,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoicesController">
+<BorderPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.SalesInvoicesController">
    <top>
       <HBox spacing="10.0" style="-fx-padding: 5;" BorderPane.alignment="CENTER">
          <children>
@@ -27,7 +28,7 @@
                   </ImageView>
                </graphic>
             </Label>
-            <HBox spacing="10.0">
+            <HBox alignment="CENTER_LEFT" spacing="10.0">
                <children>
                   <VBox layoutX="10.0" layoutY="10.0">
                      <children>
@@ -53,6 +54,8 @@
                         <ComboBox fx:id="salesTypeFilter" editable="true" />
                      </children>
                   </VBox>
+                  <CheckBox fx:id="isDispatched" mnemonicParsing="false" text="isDispatched" />
+                  <CheckBox fx:id="isPaid" mnemonicParsing="false" text="isPaid" />
                </children>
             </HBox>
          </children>
