--- a/src/main/resources/com/vertex/vos/CollectionPaymentForm.fxml
+++ b/src/main/resources/com/vertex/vos/CollectionPaymentForm.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -11,10 +12,11 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane style="-fx-padding: 10;" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionPaymentFormController">
+<BorderPane style="-fx-padding: 10;" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionPaymentFormController">
    <stylesheets>
       <URL value="@assets/global.css" />
       <URL value="@assets/style.css" />
@@ -23,7 +25,17 @@
    <top>
       <BorderPane fx:id="parentBorderPane" BorderPane.alignment="CENTER">
          <top>
-            <Label styleClass="header" text="CEX#1251 DOC" BorderPane.alignment="TOP_LEFT" />
+            <HBox BorderPane.alignment="TOP_LEFT">
+               <children>
+                  <Label styleClass="header" text="CEX#1251 DOC" />
+                  <VBox alignment="TOP_RIGHT">
+                     <children>
+                        <Label text="Balance Type" />
+                        <ComboBox fx:id="balanceType" prefWidth="150.0" promptText="Credit Or Debit" styleClass="non-editable" />
+                     </children>
+                  </VBox>
+               </children>
+            </HBox>
          </top>
          <center>
             <BorderPane fx:id="denominationPane" style="-fx-padding: 10;" BorderPane.alignment="CENTER">
