--- a/src/main/resources/com/vertex/vos/CollectionForm.fxml
+++ b/src/main/resources/com/vertex/vos/CollectionForm.fxml
@@ -14,10 +14,13 @@
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="720.0" prefWidth="1368.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionFormController">
+<BorderPane prefHeight="720.0" prefWidth="1368.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionFormController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
@@ -159,7 +162,6 @@
                                     <Button fx:id="addMemoButton" disable="true" layoutX="155.0" layoutY="10.0" mnemonicParsing="false" text="Add Memo" />
                                 </buttons>
                               </ButtonBar>
-                              <Label fx:id="transactionBalance" text="Total" />
                            </children>
                         </VBox>
                      </bottom>
@@ -189,7 +191,6 @@
                                     <Button fx:id="addAdjustmentButton" disable="true" layoutX="145.0" layoutY="10.0" mnemonicParsing="false" text="Add Adjustment" />
                                 </buttons>
                               </ButtonBar>
-                              <Label fx:id="paymentBalance" text="Total" />
                            </children>
                         </VBox>
                      </bottom>
@@ -198,12 +199,37 @@
             </SplitPane>
          </center>
          <bottom>
-            <VBox BorderPane.alignment="CENTER">
-               <children>
-                  <Label text="Remarks" />
-                  <TextArea fx:id="remarks" prefHeight="200.0" prefWidth="200.0" />
-               </children>
-            </VBox>
+            <BorderPane BorderPane.alignment="CENTER">
+               <left>
+                  <VBox BorderPane.alignment="CENTER">
+                     <children>
+                        <Label text="Remarks" />
+                        <TextArea fx:id="remarks" prefHeight="200.0" prefWidth="200.0" />
+                     </children>
+                  </VBox>
+               </left>
+               <right>
+                  <GridPane BorderPane.alignment="CENTER">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <Label fx:id="transactionBalance" text="Total" GridPane.columnIndex="1" />
+                        <Label fx:id="paymentBalance" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                        <Label fx:id="collectionBalance" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label text="Total Payables " />
+                        <Label text="Total Collection" GridPane.rowIndex="1" />
+                        <Label text="Balance" GridPane.rowIndex="2" />
+                     </children>
+                  </GridPane>
+               </right>
+            </BorderPane>
          </bottom>
       </BorderPane>
    </center>
