--- a/src/main/resources/com/vertex/vos/CollectionForm.fxml
+++ b/src/main/resources/com/vertex/vos/CollectionForm.fxml
@@ -20,7 +20,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="720.0" prefWidth="1368.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionFormController">
+<BorderPane prefHeight="720.0" prefWidth="1368.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.vertex.vos.CollectionFormController">
    <stylesheets>
       <URL value="@assets/style.css" />
       <URL value="@assets/table.css" />
@@ -88,9 +88,9 @@
                                        </columnResizePolicy>
                                        <columns>
                                           <TableColumn fx:id="invoiceTypeColInv" minWidth="-1.0" prefWidth="75.0" text="Type" />
-                                          <TableColumn fx:id="docNoColInv" prefWidth="75.0" text="Document No" />
-                                          <TableColumn fx:id="invoiceNoColInv" prefWidth="75.0" text="Invoice No" />
                                           <TableColumn fx:id="invoiceDateColInv" prefWidth="75.0" text="Invoice Date" />
+                                          <TableColumn fx:id="invoiceNoColInv" prefWidth="75.0" text="Invoice No" />
+                                          <TableColumn fx:id="docNoColInv" prefWidth="75.0" text="Document No" />
                                           <TableColumn prefWidth="75.0" text="Customer">
                                              <columns>
                                                 <TableColumn fx:id="customerCodeColInv" prefWidth="75.0" text="Code" />
@@ -174,6 +174,7 @@
                               <TableColumn fx:id="bankCollectionDetailCol" prefWidth="75.0" text="Bank" />
                               <TableColumn fx:id="checkNoCollectionDetailCol" prefWidth="75.0" text="Check No." />
                               <TableColumn fx:id="checkDateCollectionDetailCol" prefWidth="75.0" text="Check Date" />
+                              <TableColumn fx:id="customerCollectionCol" prefWidth="75.0" text="Customer" />
                               <TableColumn fx:id="amountCollectionDetailCol" prefWidth="75.0" text="Amount" />
                               <TableColumn fx:id="remarksCollectionDetailCol" prefWidth="75.0" text="Remarks" />
                            </columns>
@@ -209,23 +210,26 @@
                   </VBox>
                </left>
                <right>
-                  <GridPane BorderPane.alignment="CENTER">
+                  <GridPane prefHeight="120.0" prefWidth="255.0" BorderPane.alignment="CENTER">
                     <columnConstraints>
                       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
                         <Label fx:id="transactionBalance" text="Total" GridPane.columnIndex="1" />
-                        <Label fx:id="paymentBalance" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label fx:id="collectionBalance" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="paymentBalance" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <Label fx:id="collectionBalance" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="3" />
                         <Label text="Total Payables " />
-                        <Label text="Total Collection" GridPane.rowIndex="1" />
-                        <Label text="Balance" GridPane.rowIndex="2" />
+                        <Label text="Total Collection" GridPane.rowIndex="2" />
+                        <Label text="Balance" GridPane.rowIndex="3" />
+                        <Label text="Total Paid Amount" GridPane.rowIndex="1" />
+                        <Label fx:id="paidBalance" text="Total" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                      </children>
                   </GridPane>
                </right>
